--- a/app/templates/defaultPasswords.html
+++ b/app/templates/defaultPasswords.html
@@ -14,32 +14,23 @@
         Many devices use default passwords. Manufacturers provide these default credentials to make the initial setup of a device simpler. Default credentials are also used whenever a device is reset back to factory settings.
         <br/>
         Default passwords are usually simple, and not unique to each individual device. These default credentials can be found in the instruction manuals, or on the device itself. The expecation is that each user will change their password to something that is unique; however, many do not. This presents an enormous security concern. 
-        </p>
-        <div style="margin-top:20px">
+    </p>
+
+    <div style="margin-top:20px">
         <h4>There are websites such as:
-        <a style="color:red" href="https://datarecovery.com/rd/default-passwords/" target="_blank">this one</a> that have the default credentials for many devices.</h4>
+            <a style="color:red" href="https://datarecovery.com/rd/default-passwords/" target="_blank">this one</a> that have the default credentials for many devices.
+        </h4>
+    </div>
+
+
+
+    <div style="float:right; margin-top: 20px;">
+        <div style="float:left; margin-right: 20px; ">
+            <a href="{{ url_for('passwordCracking') }}"><button class="btn btn-info">Go back</button></a>
         </div>
-    
-    
-
-<div style="float:right; margin-top: 20px;">
-<div style="float:left; margin-right: 20px; ">
-<a href="{{ url_for('passwordCracking') }}"><button class="btn btn-info">Go back</button></a>
+        <div style="float:right;">
+            <a href="{{ url_for('phishing') }}"><button class="btn btn-info">Next</button></a>
+        </div>
+    </div>
 </div>
-<div style="float:right;">
-<a href="{{ url_for('phishing') }}"><button class="btn btn-info">Next</button></a>
-</div>
-</div>
-
-<!--
-<div style="float:left; margin-top: 50px; margin-left: 330px;">
-<a href="{{ url_for('passwordCracking') }}"><button class="btn btn-info"style="margin: 0px 0px 0px 0px;">Go back</button></a>
-</div>
-<div style="float:right; margin-top: 50px">
-<a href="{{ url_for('phishing') }}"><button class="btn btn-info" style="margin: 0px 0px 0px 0px;">Next</button></a>
-</div>
--->
-
-</div>
-
 {% endblock %}
